--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,41 @@
           }
         }
       }
+    },
+    "mascarpone": {
+      "root": "projects/mascarpone",
+      "sourceRoot": "projects/mascarpone/src",
+      "projectType": "library",
+      "prefix": "mask",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/mascarpone/tsconfig.lib.json",
+            "project": "projects/mascarpone/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/mascarpone/src/test.ts",
+            "tsConfig": "projects/mascarpone/tsconfig.spec.json",
+            "karmaConfig": "projects/mascarpone/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/mascarpone/tsconfig.lib.json",
+              "projects/mascarpone/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "mascarpone-demo"
