--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "mascarpone": [
+        "dist/mascarpone"
+      ],
+      "mascarpone/*": [
+        "dist/mascarpone/*"
+      ]
+    }
   }
 }
