license for angular library

--- a/projects/mascarpone/package.json
+++ b/projects/mascarpone/package.json
@@ -1,6 +1,8 @@
 {
   "name": "mascarpone",
-  "version": "0.0.1",
+  "version": "0.0.0",
+  "description": "Input masking components for angular",
+  "license": "LGPLv3",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
