undo @rslemos/mascarpone

--- a/projects/mascarpone/package.json
+++ b/projects/mascarpone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rslemos/mascarpone",
+  "name": "mascarpone",
   "version": "0.0.0",
   "description": "Input masking components for angular",
   "license": "LGPLv3",
